# zimur

./: Cargo.toml
src/: app.rs  ballistic.rs  main.rs  particle.rs  pfgen.rs  timing.rs
src/math/: mod.rs  precision.rs  vec2.rs  vec3.rs
src/mywgpu/: camera.rs  instance.rs  mod.rs  shader.wgsl  vertex.rs
