[package]
name = "zimur"
version = "0.1.0"
edition = "2024"
authors = ["MZwallow"]

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
cgmath = "0.18"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "26.0"
bytemuck = { version = "1.23", features = ["derive"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
